fix: readme image link and icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="main__headers">
             <h3 id="queryType" class="querySection__title"></h3>
             <button id="swapButton" class="headers__swap">
-                <img src="/public/assets/swap-icon.svg" alt="Swap">
+                <img src="public/assets/swap-icon.svg" alt="Swap">
             </button>
             <h3 id="answerType" class="answerSection__title"></h3>
         </section>
@@ -43,7 +43,7 @@
         <section class="info-section">
             <p id="errorMessage" class="info-section__error-message"></p>
             <button id="copyButton" class="info-section__copy">
-                <img src="/public/assets/copy-icon.svg" alt="copy">
+                <img src="public/assets/copy-icon.svg" alt="copy">
             </button>
         </section>
         <p id="copyMessage" class="copyMessage"></p>
